2004-12-27 22:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Correction for Bug#11410.

2004-12-27 21:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBObjectAdditions.m: Changed some implementations.
	* GormObjectEditor.m: Removed methods which it was unecessary
	to override.

2004-12-27 21:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: 
	* GormDocument.m: Change to properly handle exception when
	a class fails to parse.
	* Gorm.m: Correction for Bug#11415 and also made a changed to
	discontinue connection when a cut/paste/copy operation is done.
	* GormObjectEditor.m: Correction for Bug#11415.
	* Palettes/0Menus/GormMenuEditor.m: Correction for Bug#11412. 
	
2004-12-23 14:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFilesOwner.h: Added inspector declaration.
	* GormFilesOwner.m: Changed code in setObject to create an 
	autoreleased mutableCopy of the array and removed FirstResponder from
	the list to prevent the user from selecting this.
	* GormPrivate.h: Added the include for GormFilesOwner.h and also
	removed the inspector declaration from this file.

2004-12-23 13:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewEditor.m: In -performDragOperation: copy the image/sound
	before setting it into the control to make certain any changes 
	made to the original image don't reflect in the system wide image.

2004-12-23 06:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormClassPanel.gorm: Set nextKeyView for all views
	in the window and the initialFirstResponder of the window to the
	table view.

2004-12-23 06:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Fix for issue when loading from gmodel.
	Corrected _refreshView: and searchForClass: so that if list is nil,
	the selection isn't set.
	* Gorm.spec.in: Minor correction.

2004-12-19 09:05 Gregory John Casamento <greg_casamento@yahoo.com>
