@@ -1,3 +1,8 @@
+2004-12-28 08:38 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/0Menus/GormMenuEditor.m: Improvement on previous
+	correction.
+
 2004-12-27 22:02 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/0Menus/GormMenuEditor.m: Correction for Bug#11410.
